# NDKLearning

./: dxiptvtxzq.jks  settings.gradle
app/: build.gradle
app/libs/: baselib-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test.cpp  test.h
app/src/main/cpp/log/: android_log_util.cpp  android_log_util.h
app/src/main/cpp/netlearn/: net_request.cpp  net_request.h
app/src/main/cpp/threadLearn/: two_thread_print_hello.cpp  two_thread_print_hello.h
app/src/main/java/com/wonderbee/myapplication/: MainActivity.java  Student.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
baselib/: build.gradle
baselib/src/main/: AndroidManifest.xml
baselib/src/main/cpp/: CMakeLists.txt  test.cpp  test.h
baselib/src/main/java/com/wonderbee/baselib/: MainClient.java
gradle/wrapper/: gradle-wrapper.properties
